# responsible-ai-toolbox-mitigations

./: .buildinfo  .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  api.html  bump_version.py  gallery.html  genindex.html  getting_started.html  index.html  install_guide.html  integration_to_libs.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  requirements.in  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/workflow/: ci.yml
.github/workflows/: CI.yml  ci.yml  format_check.yml  github-pages.yml  release-pypi.yml
_images/: inheritance-078ac2e1aeb308123a77d94115957a60647583b6.png.map  inheritance-0be6f709a534c3edc3b785d1eef1c8b561ae4a36.png.map  inheritance-0d92754945b0a5cee79ce488c43332551d1db792.png.map  inheritance-11cf40ef79c034e99cc827023f9d49ac59592122.png.map  inheritance-127cf90793ed104d9fab0e793e1927aa49a6fcc5.png.map  inheritance-1329d112c5421dc631a647d88485b33308379e45.png.map  inheritance-1461575104fa47740210007190aff8a33a1c95c0.png.map  inheritance-180942634b60f677db79fd99abc462f71e3c4eb9.png.map  inheritance-1f1e9b3ce4c777d85dd5e81d3d77a212ade95dff.png.map  inheritance-20abd733a93f20cbb9fa377f29e003d0ab58837c.png.map  inheritance-2175474274e5bbf26a3957513be95a148fff09a8.png.map  inheritance-2828d6b7b9c00e3ccc48b69dfdecdcad2e71fec7.png.map  inheritance-2f2978e26f8059c5e02652f7e9255897680533ee.png.map  inheritance-335e8287cf126b0c10fcaa572c788476264b286b.png.map  inheritance-343f2269e525fc366ffeac700248df904e0b8dff.png.map  inheritance-367523cb1e37b0d927aaf6e9b56e2f31250b7146.png.map  inheritance-4126767c5d66b6adb5b527a532cfdf7659ac2a94.png.map  inheritance-4f550e3c00fd3a60a94ade75329548c45f5406ba.png.map  inheritance-57f19441aa75b7760b6997d76a905f23b11d2154.png.map  inheritance-58ed49e9d2ebde0ea4d3ca6fc428bfad051a6f23.png.map  inheritance-6845db54df4d26a70087d7a1cd336635f26f0be7.png.map  inheritance-684c3533357f1915ded0d97151d87e96a997930a.png.map  inheritance-6d79479e3258711d8db173b8ac9ad2f8b9233604.png.map  inheritance-71f35903f1c3033d2afec438ad73f1a196a15851.png.map  inheritance-76cebb0908d1c5f7c311a230947d19169a813c66.png.map  inheritance-7717b5bea0c3643330623556aded00fbf9e17093.png.map  inheritance-780c1db93ecc204afdc5ffc37cbc75080d076baf.png.map  inheritance-792d1d582808389c372b5ec84ccc5ff649b13949.png.map  inheritance-7df0dbe79290de839fd0f3e7137f19535a2bc1f5.png.map  inheritance-85ec8ac5e4a9f706d139679de2133e3fe4f4df8e.png.map  inheritance-8a7250778be268e94700f5013862b37d73143aed.png.map  inheritance-8b977831624bf72f53ecc6e7e012d20a1244a8e3.png.map  inheritance-8cf910d59ac64d3bdd3194843e4f77dddc40ee52.png.map  inheritance-997a1968724e1ca6a76496ef8e4435a27c47c341.png.map  inheritance-999500e554c4a4e4420a2b86257ec138883797f3.png.map  inheritance-9cc363319a93a14c51eee1d5b58f0eb2e9f1d8d7.png.map  inheritance-a2e2c3603acfdf26ab2fb4e8c65c5489942c5287.png.map  inheritance-a346f30c2ea2c2081eb75ab3c53240ef059a5370.png.map  inheritance-b5800ffd35e6574c81ccb7376510b226d1784a49.png.map  inheritance-b76316ca67c295d5ecb2304e105dddbb3f1c4e21.png.map  (+15 more)
_sources/: gallery.rst.txt  getting_started.rst.txt  index.rst.txt  install_guide.rst.txt  integration_to_libs.rst.txt
_sources/cohort/: case_studies.rst.txt  cohort.rst.txt  cohort_manager.rst.txt  decoupled_class.rst.txt  intro.rst.txt  module_tests.rst.txt  utils.rst.txt
cohort/: case_studies.html  cohort.html  cohort_definition.html  cohort_handler.html  cohort_manager.html  decoupled_class.html  intro.html  module_tests.html  utils.html
databalanceanalysis/: __init__.py  aggregate_functions.py  aggregate_measures.html  aggregate_measures.py  balance_metric_functions.py  constants.py  databalanceanalysis.html  distribution_measures.html  distribution_measures.py  feature_measures.html  feature_measures.py  intro.html
dataprocessing/: __init__.py  case_studies.html  case_study_utils.html  dataprocessing.html  intro.html  model_utils.html  module_tests.html  modules.html  pipeline.html  random_sample.py  rebalance.py  setup.py  split.py  toy_data.html  transformer.py
datasets/: AdultCensusIncome.csv
docs/: Makefile  api.rst  conf.py  gallery.rst  getting_started.rst  index.rst  install_guide.rst  integration_to_libs.rst
errorsmitigation/: LICENSE  README.md  __init__.py
notebooks/: combo_notebook.ipynb  combo_simuation.ipynb  data_balance_e2e.html  data_balance_e2e.ipynb  download.py
raimitigations/: __init__.py
test/: conftest.py
utils/: data_utils.html  metric_utils.html  model_utils.html  toy_data.html  utils.html
(+660 files in other folders)
