[metadata]
name = raimitigations
version = 1.0.0
description = Python library for error mitigation and data balance analysis with a Responsible AI focus
author = Matheus Mendonça, Dany Rouhana
author_email = responsible-ai-toolbox@microsoft.com
license = MIT License
url = https://github.com/microsoft/responsible-ai-toolbox-mitigations
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy
    pandas
    scipy
    scikit-learn
    imbalanced-learn<=0.9.1
    sdv==0.16.0
    mlxtend
    researchpy
    catboost
    statsmodels
    xgboost

[options.extras_require]
all =
    Jupyter
    uci_dataset
    seaborn
    feature-engine

dev =
    Jupyter
    uci_dataset
    seaborn
    feature-engine
    pre-commit
    configparser
    semver
    build
    pytest
    pytest-codecov
    pytest-json-report
    pytest-html
    sphinx
    sphinx_rtd_theme
    nbsphinx
    nbconvert>=6.5.1
    sphinx_gallery==0.10.1
    nbstripout
    nbformat

[options.packages.find]
include =
	raimitigations*

[flake8]
max-line-length = 120
extend-ignore =
    E203,
    F541,
    E501,
    E722,
    E402,
    E302

[pycodestyle]
max_line_length = 120
ignore =
    E203,
    F541,
    E501,
    E722,
    E402,
    E302

