[metadata]
name = raimitigations
version = 1.1.0
description = Python library for implementing and exploring mitigations for Responsible AI.
author = Matheus Mendonça, Marah Abdin, Dany Rouhana
author_email = rai-toolbox@microsoft.com
license = MIT License
url = https://github.com/microsoft/responsible-ai-toolbox-mitigations
long_description = file: README.md
long_description_content_type = text/markdown
classifiers = 
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Programming Language :: Python :: 3.10
	Operating System :: OS Independent

[options]
packages = find:
install_requires = 
	numpy
	pandas
	seaborn
	scipy
	scikit-learn
	imbalanced-learn<=0.9.1
	sdv==0.18.0
	mlxtend
	researchpy
	catboost
	statsmodels
	xgboost
	raiutils

[options.extras_require]
all = 
	Jupyter
	uci_dataset
	seaborn
	feature-engine
dev = 
	Jupyter
	uci_dataset
	seaborn
	feature-engine
	pre-commit
	configparser
	semver
	wheel>=0.38.1
	build
	pytest
	pytest-codecov
	pytest-json-report
	pytest-html
	sphinx
	sphinx_rtd_theme>=1.1.1
	nbsphinx
	nbconvert>=6.5.1
	sphinx_gallery==0.10.1
	nbstripout
	nbformat
	docutils<=0.17.1

[options.packages.find]
include = 
	raimitigations*

[flake8]
max-line-length = 120
extend-ignore = 
	E203,
	F541,
	E501,
	E722,
	E402,
	E302

[pycodestyle]
max_line_length = 120
ignore = 
	E203,
	F541,
	E501,
	E722,
	E402,
	E302

